--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,8 @@
     tools:context="com.esdrasmorais.inspetoronline.ui.login.LoginActivity">
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:background="@color/background"
         android:id="@+id/input_layout_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,6 +59,8 @@
 <!--    </com.google.android.material.textfield.TextInputLayout>-->
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:background="@color/background"
         android:id="@+id/input_layout_verification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -156,7 +160,7 @@
         android:textAlignment="center"
         android:textAllCaps="true"
         android:padding="7dp"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+        style="@style/Widget.MaterialComponents.Button.TextButton"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/verify"
@@ -167,7 +171,7 @@
         android:textAlignment="center"
         android:padding="7dp"
         android:textAllCaps="true"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+        style="@style/Widget.MaterialComponents.Button"/>
 
 <!--    <Button-->
 <!--        android:id="@+id/resend"-->
@@ -196,7 +200,7 @@
         android:textAlignment="center"
         android:padding="7dp"
         android:textAllCaps="true"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
+        style="@style/Widget.MaterialComponents.Button"/>
 
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 </LinearLayout>
