--- a/app/src/main/res/layout/dropdown_impediment_to_inspection_menu_popup_item.xml
+++ b/app/src/main/res/layout/dropdown_impediment_to_inspection_menu_popup_item.xml
@@ -4,5 +4,4 @@
     android:padding="16dp"
     android:maxLines="1"
     android:textAppearance="?attr/textAppearanceSubtitle1"
-    android:textSize="17sp" android:importantForAccessibility="yes"
-    />
+    android:textSize="17sp" android:importantForAccessibility="yes"/>
