--- a/app/src/main/res/layout/inspection_dialog.xml
+++ b/app/src/main/res/layout/inspection_dialog.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/inspection_type_list"
-        android:background="@color/background" /><!--android:divider="@null"-->
+        android:background="@color/background"
+        android:textAppearance="?android:attr/textAppearanceMedium"/><!--android:divider="@null"-->
 
 </LinearLayout>
