--- a/app/src/main/res/layout/inspection_type_list_item.xml
+++ b/app/src/main/res/layout/inspection_type_list_item.xml
@@ -10,7 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-
 <!--    <LinearLayout-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
@@ -23,8 +22,8 @@
             android:layout_height="wrap_content"
             android:gravity="left"
             android:paddingLeft="10dp"
-            android:textStyle="bold" />
-        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
 <!--    </LinearLayout>-->
 
