--- a/app/src/main/res/layout/violation_dialog.xml
+++ b/app/src/main/res/layout/violation_dialog.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:layout_marginTop="57dp">
+    android:layout_marginTop="17dp">
+
+  <ScrollView android:layout_height="match_parent" android:layout_width="match_parent">
+
+   <LinearLayout android:orientation="vertical"
+        android:scrollbars="vertical"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_line"
@@ -26,10 +37,11 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_line"
+        android:hint="@string/hint_prefix"
         android:layout_marginBottom="17dp"
         android:id="@+id/input_layout_violation_prefixes"
         android:background="#FFFFFF">
@@ -41,15 +53,103 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_employee_type"
+        android:layout_marginBottom="17dp"
+        android:id="@+id/input_layout_violation_employee_type"
+        android:background="#FFFFFF">
+
+        <AutoCompleteTextView
+            android:id="@+id/input_layout_violation_employee_type_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_work_time"
+        android:layout_marginBottom="17dp"
+        android:id="@+id/input_layout_violation_work_time"
+        android:background="#FFFFFF">
+
+        <AutoCompleteTextView
+            android:id="@+id/input_layout_violation_work_time_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_state"
+        android:layout_marginBottom="17dp"
+        android:id="@+id/input_layout_violation_state"
+        android:background="#FFFFFF">
+
+        <AutoCompleteTextView
+            android:id="@+id/input_layout_violation_state_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_violation_type"
+        android:layout_marginBottom="17dp"
+        android:id="@+id/input_layout_violation_type"
+        android:background="#FFFFFF">
+
+        <AutoCompleteTextView
+            android:id="@+id/input_layout_violation_type_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        app:boxBackgroundColor="@color/background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_department"
+        android:layout_marginBottom="17dp"
+        android:id="@+id/input_layout_violation_department"
+        android:background="#FFFFFF">
+
+        <AutoCompleteTextView
+            android:id="@+id/input_layout_violation_department_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/permanence_button_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_save"
+        android:textAllCaps="false"
+        android:layout_marginBottom="77px"
+        android:textAlignment="center"/>
+
+   </LinearLayout>
+
+  </ScrollView>
+
 </LinearLayout>
-<!--    R.id.-->
-<!--    );-->
-<!--    this.prefixDropdown = view.findViewById(R.id.violation_lines_dropdown);-->
-<!--    this.inputLayoutDepartment =-->
-<!--    view.findViewById(R.id.input_layout_violation_department);-->
-<!--    this.departmentDropdown =-->
-<!--    view.findViewById(R.id.violation_department_dropdown);-->
-<!--    this.inputLayoutSubject =-->
-<!--    view.findViewById(R.id.input_layout_guidance_subject);-->
-<!--    this.editTextNote = view.findViewById(R.id.edit_text_violation_note);-->
-<!--    this.save = view.findViewById(R.id.violation_button_save);-->
