--- a/app/src/main/res/layout/content_inspection.xml
+++ b/app/src/main/res/layout/content_inspection.xml
@@ -22,7 +22,7 @@
     tools:context="com.esdrasmorais.inspetoronline.ui.inspection.InspectionReportActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
         android:background="@color/background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,7 +33,8 @@
         <AutoCompleteTextView
             android:id="@+id/line_dropdown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@color/background"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
