--- a/app/src/main/res/layout/dropdown_line_menu_popup_item.xml
+++ b/app/src/main/res/layout/dropdown_line_menu_popup_item.xml
@@ -4,4 +4,5 @@
     android:padding="16dp"
     android:maxLines="1"
     android:textAppearance="?attr/textAppearanceSubtitle1"
-    android:textSize="17sp" android:importantForAccessibility="yes"/>
+    android:textSize="17sp" android:importantForAccessibility="yes"
+    android:background="@color/background"/>
